# interactive-training

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
examples/: llm_as_tuner.py  llm_prompt_template.md  train_bert_imdb.py  train_example_bert_imdb.py  train_example_dataset_mix_reload.py  train_example_gpt-2_wikitext.py  train_wikitext-2.py  train_wikitext-2_gpt2.py  train_wikitext-2_gpt2_llm_as_tuner.py  train_wikitext-2_param_gpt2_tune.py  train_wikitext-2_param_tune.py
frontend/interactive_optimizer/: index.html  package-lock.json  package.json  vite.config.ts
frontend/interactive_optimizer/src/: App.css  App.tsx
frontend/interactive_optimizer/src/api/: api.ts
frontend/interactive_optimizer/src/components/bottomDisplay/: bottomDisplay.tsx  logDisplay.tsx  modelLayerControl.tsx
frontend/interactive_optimizer/src/store/: store.ts
frontend/interactive_optimizer/src/utils/: cssLength.ts
interactive/server/: server.py
interactive/web/interactive_optimizer/: package-lock.json  package.json
interactive/web/interactive_optimizer/src/: App.jsx
interactive_local/web/interactive_optimizer/: .eslintrc  package-lock.json  package.json
interactive_local/web/interactive_optimizer/src/: App.tsx  index.css
interactive_training/: __init__.py  callbacks.py  constants.py  interactive_dataset_mixin.py  interactive_training_mixin.py  interactive_training_server.py  utils.py
src/: __init__.py  callbacks.py  constants.py  interactive_training_mixin.py  interactive_training_server.py
trainer/: __init__.py  callbacks.py  constants.py  interactive_callback.py  interactive_trainer.py  interactive_training_mixin.py  interactive_training_server.py  interactive_training_wrapper.py
(+74 files in other folders)
