[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Add your Python dependencies here
dependencies = [
    "transformers>=4.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[tool.setuptools.package-data]
# This is the key part: include all files within the 'frontend' directory
"my_project_name" = ["frontend/**/*"]